<resources>
    <string name="app_name">Movies</string>
    <string name="details">Детали</string>
    <string name="poster_image">poster_image</string>
    <string name="filmDescriptionText">Описание фильма</string>
    <string name="invite_friend">Пригласить друга</string>
    <string name="look">Зацени, что я нашёл!</string>
    <string name="chooser"> Выберите способ отправки приглашения</string>

    <string name="lotr_title">Властелин колец\nГод: 2001, Режиссёр: Питер Джексон</string>
    <string name="lotr_description"> \t\tСказания о Средиземье - это хроника Великой войны за Кольцо, войны, длившейся не одну тысячу лет. Тот, кто владел Кольцом, получал власть над всеми живыми тварями, но был обязан служить злу.
        Тихая деревня, где живут хоббиты. Волшебник Гэндальф, придя на 111-й день рождения к своему старому другу Бильбо Бэггинсу, начинает вести разговор о кольце, которое Бильбо нашел много лет назад.
    </string>

    <string name="pcs_title">Пираты карибского моря\nГод: 2003, Режиссёр: Гор Вербински</string>
    <string name="pcs_description"> \t\tЖизнь харизматичного авантюриста, капитана Джека Воробья, полная увлекательных приключений, резко меняется, когда его заклятый враг - капитан Барбосса - похищает корабль Джека, Черную Жемчужину,
        а затем нападает на Порт Ройал и крадет прекрасную дочь губернатора, Элизабет Свонн. Друг детства Элизабет, Уилл Тернер, вместе с Джеком возглавляет спасательную экспедицию на самом быстром корабле
        Британии, в попытке вызволить девушку из плена и заодно отобрать у злодея Черную Жемчужину.
    </string>

    <string name="eurotrip_title">Евротур\nГод: 2004, Режиссёр: Джефф Шаффер</string>
    <string name="eurotrip_description">
        \t\t Скотт Томас — выпускник местной школы, которому нужна помощь в изучении немецкого языка, и именно для этих целей он знакомится с жителем Германии по имени Майк и начинает с ним дружескую переписку.
        Причём Скотт абсолютно уверен в том, что Майк — это парень, и делится с ним своими переживаниями и проблемами, которые возникают у него с девушкой. Но в конце концов Скотт узнаёт, что Майк, точнее Мике
        — это обворожительная блондинка, которой Скотт очень понравился. И теперь он сделает всё, чтобы увидеться с Мике, даже совершит путешествие по Европе.
    </string>


    <string name="do_you_like_it">Нравится?</string>
    <string name="yes">Да</string>
    <string name="your_comment">Оставьте комментарий…</string>
    <string name="action_settings">Настройки</string>
    <string name="country_flag">country_flag</string>
    <string name="some_text">Некий текст</string>
    <string name="lang_russian">Русский</string>
    <string name="lang_english">Английский</string>
    <string name="theme">Тема</string>
    <string name="language">Язык</string>
    <string name="light">С</string>
    <string name="night">Т</string>
    <string name="invite_friend_button">Invite Friend Button</string>
    <string name="exit_dialog_question">Вы уверены, что хотите выйти?</string>
    <string name="ok_custom_dialog_button">Да</string>
    <string name="cancel_custom_dialog_button">Нет</string>
    <string name="add_favorite_button" translatable="false">Add Favorite Button</string>
    <string name="bn_item_home">Главная</string>
    <string name="bn_item_settings">Настройки</string>
    <string name="bn_item_favorite">Избранное</string>
    <string name="settings">Настройки</string>
    <string name="favorite">Избранное</string>
    <string name="list_of_movies">Список фильмов</string>
    <string name="movie_description">Описание фильма</string>
    <string name="added_to_favorites">Добавлено в избранное</string>
    <string name="removed_from_favorites">Удалено из избранного</string>
    <string name="undo">Отменить</string>

</resources>